--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,14 +3,23 @@
 ---
 
 <!doctype html>
-<html style="background: #0a0a0a;">
+<html style="background:#0a0a0a;height:100%">
 	<head>
 		<meta charset="utf-8" />
-		<script is:inline>
-			const userLang = navigator.language || navigator.userLanguage;
-			const isSpanish = userLang.toLowerCase().startsWith("es");
-			window.location.replace(isSpanish ? "/es/" : "/en/");
+		<style>
+			body {
+				background: #0a0a0a;
+				margin: 0;
+				padding: 0;
+				height: 100%;
+			}
+		</style>
+		<script>
+			const l = navigator.language;
+			location.replace(
+				l.toLowerCase().startsWith("es") ? "/es/" : "/en/",
+			);
 		</script>
 	</head>
-	<body style="background: #0a0a0a;"> </body>
+	<body></body>
 </html>
