--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,5 @@
 ---
+import "@fontsource-variable/roboto-mono";
 import { getLangFromUrl } from "../i18n/utils";
 
 interface Props {
@@ -25,19 +26,18 @@ const {
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<link rel="apple-touch-icon" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
+		<link
+			rel="canonical"
+			href={new URL(
+				Astro.url.pathname,
+				Astro.site ?? "https://daryl.sh",
+			).toString()}
+		/>
 
 		<!-- Primary Meta Tags -->
 		<title>{title}</title>
 		<meta name="title" content={title} />
 		<meta name="description" content={description} />
-
-		<!-- Google Fonts -->
-		<link rel="preconnect" href="https://fonts.googleapis.com" />
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-		<link
-			href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;500;700&display=swap"
-			rel="stylesheet"
-		/>
 	</head>
 	<body>
 		<slot />
@@ -66,7 +66,7 @@ const {
 	body {
 		background-color: var(--bg-primary);
 		color: var(--text-primary);
-		font-family: "Roboto Mono", monospace;
+		font-family: "Roboto Mono Variable", monospace;
 		height: 100%;
 		width: 100%;
 		overflow-x: hidden;
@@ -77,7 +77,7 @@ const {
 	h2,
 	h3,
 	h4 {
-		font-family: "Roboto Mono", monospace;
+		font-family: "Roboto Mono Variable", monospace;
 		font-weight: 700;
 		letter-spacing: -0.02em;
 	}
